--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: "Mundana Free Jekyll Theme"
+title: "读与未读"
 layout: default
 pagination:
     enabled: true
-description: "A great Jekyll theme developed by Sal @wowthemesnet."
+description: "读过的，以及未读的"
 ---
 
 
