--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: "读与未读"
+title: "ReadUnread"
 layout: default
 pagination:
     enabled: true
-description: "读过的，以及未读的"
+description: "read the unread"
 ---
 
 
