update basic info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "ReadUnread"
 layout: default
 pagination:
     enabled: true
-description: "read the unread"
+description: "sth. worth to be read.books,movies,stories,etc.not about share,just for practice."
 ---
 
 
