--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: "ReadUnread"
+title: "&#x8BFB;&#x4E0E;&#x672A;&#x8BFB;"
 layout: default
 pagination:
     enabled: true
-description: "sth. worth to be read.books,movies,stories,etc.not about share,just for practice."
+description: "sth. worth to be read.books,movies,stories,etc.not about share,just for personal practice."
 ---
 
 
