update some info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "&#x610F;&#x8BC6;&#x7897;"
 layout: default
 pagination:
     enabled: true
-description: "sth. worth to be read.books,movies,stories,etc.not about share,just for personal practice."
+description: "意识培养皿，意识的碗。丢一些东西进去，假以时日，看看是否会像原始汤一样生长出一些东西来。"
 ---
 
 
