--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "&#x610F;&#x8BC6;&#x7897;"
 layout: default
 pagination:
     enabled: true
-description: "意识培养皿，意识的碗。丢一些东西进去，假以时日，看看是否会像原始汤一样生长出一些东西来。"
+description: "&#x610F;&#x8BC6;&#x57F9;&#x517B;&#x76BF;&#xFF0C;&#x610F;&#x8BC6;&#x7684;&#x7897;&#x3002;&#x4E22;&#x4E00;&#x4E9B;&#x4E1C;&#x897F;&#x8FDB;&#x53BB;&#xFF0C;&#x5047;&#x4EE5;&#x65F6;&#x65E5;&#xFF0C;&#x770B;&#x770B;&#x662F;&#x5426;&#x4F1A;&#x50CF;&#x539F;&#x59CB;&#x6C64;&#x4E00;&#x6837;&#x751F;&#x957F;&#x51FA;&#x4E00;&#x4E9B;&#x4E1C;&#x897F;&#x6765;&#x3002;"
 ---
 
 
